# Deepglobe

./: .gitignore  README.md  app.py  inference.py  model.py  requirements.txt  train.py
.github/workflows/: main.yml
AWS_templates/: cloudformation.yaml  create_clf.sh  notes.txt  segmensat.conf
deploy-fastapi/: api.py  apis.py  index.html  test_api.py  ui.py
deploy-fastapi/fastapi/: api.py
deploy-fastapi/templates/: display.html  index.html
deploy_fastapi/: docker-compose.yml  final_model.pth  new-key-pair.pem
deploy_fastapi/fastapi/: Dockerfile  api.py  config.yaml  get_subset_data.py  helpers.py  model.py  pyproject.toml  requirements.txt  utils.py
deploy_fastapi/streamlit/: Dockerfile  pyproject.toml  requirements.txt  ui.py
deploy_fastapi/test_app/: api.py  app.py  app2.py
deploy_lambda/: Dockerfile  dep_lambda.py  requirements.txt
notebooks/: DeepGlobe_train.ipynb  config.yaml  simple_inference.ipynb
src/: Dataset.py  inference.py  main.py  model.py
templates/: upload.html
utils/: get_subset_data.py  utils.py  utils_scores.py  viz.py
